src/app/components/header/header.component.css
body {
  padding-top: 70px;
}
.bg-navbar-blue {
  background-color: #255e69 !important;
}

.navbar-brand {
  color: white !important;
}

.cipher-name {
  color: white;
}
.cipher-type {
  color: #6a959d;
}

.btn-outline-secondary {
  margin: 0 1.5rem;
  color: white;
  border-color: white;
}

.btn-outline-secondary:hover,
.show > .btn-outline-secondary.dropdown-toggle {
  background-color: #801d15;
}

.main-navbar {
  padding: 0.5vh 0;
  margin-bottom: 1vh;
  position: fixed;
  width: 100%;
  height: 9vh;
  z-index: 101;
  box-sizing: border-box;
  border-bottom: 1px solid white;
}

.cipher-navbar {
  padding: 1.5rem 0;
  position: fixed;
  width: 100%;
  z-index: 100;
  top: 7.2vh;
}

.navbar-sticky > p {
  text-align: left;
  display: inline-block;
}

.navbar-sticky {
  color: white;
  font-size: larger;
  background-color: #255e69;
  padding: 1rem;
  text-align: center;
  position: fixed;
  width: 100%;
  z-index: 100;
  top: 7.2vh;
  height: 8vh;
}

.hide-cipher-navbar {
  display: none;
}

.show-cipher-navbar {
  display: block;
  top: 8vh;
  position: fixed;
  width: 100%;
  z-index: 2;
}

.static-top {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 1000;
}

.right {
  display: inline-block;
  right: 18.3vw;
  position: absolute;
}

.center {
  text-align: center;
}

